<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/login_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:fontFamily="@font/roboto_black"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/login_id_et"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        android:background="@null"
        android:fontFamily="@font/roboto_medium"
        android:hint="@string/id"
        android:paddingStart="10dp"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_txt" />

    <View
        android:id="@+id/thin1"
        android:layout_width="280dp"
        android:layout_height="2dp"
        android:layout_marginTop="6dp"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_id_et" />

    <EditText
        android:id="@+id/login_pw_et"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:background="@null"
        android:fontFamily="@font/roboto_medium"
        android:hint="@string/pwd_B"
        android:paddingStart="10dp"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/thin1" />

    <View
        android:id="@+id/thin2"
        android:layout_width="280dp"
        android:layout_height="2dp"
        android:layout_marginTop="6dp"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_pw_et" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/button_custom"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/thin2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="110dp"
        android:layout_marginTop="45dp"
        android:fontFamily="@font/nanumgothic_extrabold"
        android:text="@string/explain_signup"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_btn" />

    <TextView
        android:id="@+id/txt_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:layout_marginRight="110dp"
        android:fontFamily="@font/nanumgothic_extrabold"
        android:text="@string/kr_signup"
        android:textColor="#006FF2"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_btn" />


</androidx.constraintlayout.widget.ConstraintLayout>